footer and contact change

--- a/projekty.html
+++ b/projekty.html
@@ -580,12 +580,12 @@
                 </div>
                 <div class="prague-footer-info-block">
 
-                    <h6 class="footer-info-block-title">GET IN TOUCH</h6>
+                    <h6 class="footer-info-block-title">KONTAKTUJTE MĚ</h6>
 
                     <div class="footer-info-block-content">
-                        <p><a href="tel:+7(885)5896985">+7 (885) 589 69 85</a></p>
-                        <p><a href="mailto:prague-architects@info.com">prague-architects@info.com</a></p>
-                        <p>Litačka, Jungmannova 35/29, Nové Město,Czech Republic</p>
+                        <p><a href="tel:+420735289745">+420 735 289 745</a></p>
+                        <p><a href="mailto:klara.dydnanska@gmail.com">klara.dydnanska@gmail.com</a></p>
+                        <p>IČO: 06369626</p>
                     </div>
 
                 </div>
@@ -594,39 +594,11 @@
 
                 <!-- Footer copyright -->
                 <div class="footer-copyright">
-                    <p>PRAGUE (C) 2019 ALL RIGHTS RESERVED</p>
+                    <p>© 2025 CLARE - Interiors. Všechna práva vyhrazena.</p>
                 </div>
                 <!-- End footer copyright -->
 
-                <div class="prague-social-nav">
-
-
-                    <ul class="social-content">
-                        <li>
-                            <a target="_blank" href="https://www.behance.net/foxthemes">
-                                <i aria-hidden="true" class="fa fa-behance"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a target="_blank" href="https://twitter.com/foxthemes_offic">
-                                <i aria-hidden="true" class="fa fa-twitter"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a target="_blank" href="https://www.facebook.com/foxthemes.page/">
-                                <i aria-hidden="true" class="fa fa-facebook"></i>
-                            </a>
-                        </li>
-                        <li>
-                            <a target="_blank" href="https://www.pinterest.com/foxthemes/">
-                                <i aria-hidden="true" class="fa fa-pinterest-p"></i>
-                            </a>
-                        </li>
-                    </ul>
-
                 </div>
-
-            </div>
         </div>
 
     </footer>
