--- a/projekty.html
+++ b/projekty.html
@@ -301,7 +301,7 @@
                     <div class="container padd-only-xs">
                         <div class="row">
                             <div class="col-xs-12">
-                                <div class="row prague_grid prague_categories prague_count_col4 prague_gap_col15"
+                                <div class="row prague_grid prague_categoties prague_count_col4 prague_gap_col15"
                                     data-columns="prague_count_col4" data-gap="prague_gap_col15">
                                     <div class="prague_categories_btn">
                                         <div class="categories_btn categories_btn_up">
@@ -458,7 +458,7 @@
                     <div class="container padd-only-xs">
                         <div class="row">
                             <div class="col-xs-12">
-                                <div class="row prague_grid prague_categories prague_count_col4 prague_gap_col15"
+                                <div class="row prague_grid prague_categoties prague_count_col4 prague_gap_col15"
                                     data-columns="prague_count_col4" data-gap="prague_gap_col15">
                                     <div class="prague_categories_btn">
                                         <div class="categories_btn categories_btn_up">
