--- a/kontakt.html
+++ b/kontakt.html
@@ -65,7 +65,7 @@
         <!-- end header -->
         <!-- end header -->
         <!-- start page title -->
-        <section class="page-title-big-typography bg-dark-gray ipad-top-space-margin xs-py-0" data-parallax-background-ratio="0.5" style="background-image: url(https://placehold.co/1925x1050)">
+        <section class="page-title-big-typography bg-dark-gray ipad-top-space-margin xs-py-0" data-parallax-background-ratio="0.5" style="background-image: url(images/kontakt.jpg)">
             <div class="opacity-light bg-dark-gray"></div>
             <div class="container">
                 <div class="row align-items-center justify-content-center small-screen">
