--- a/about-me.html
+++ b/about-me.html
@@ -98,101 +98,39 @@
             </div>
         </div>
     </div>
+    <div class="container no-padd">
+        <div class="row-fluid  margin-lg-40t margin-sm-70t">
+           
+            <div class="vc_column_container padd-only-xs col-sm-12 col-lg-offset-1 col-lg-7 col-md-offset-0 col-md-7 col-sm-offset-0 col-xs-12  margin-sm-20t">
+                <div class="heading  left dark">
 
-    <div class="row-fluid row-no-padding margin-lg-90t margin-xs-15t">
-        <div class="no-padd col-sm-12 ">
-            <div class="column-inner ">
-                <div class="prague-shortcode-parent ">
-                    <div class="prague-shortcode-parent-img">
-                        <span class="overlay"></span>
-                        <img src="#" data-lazy-src="img/onepage-home/a6ec5612273735.56265d52bc52e-1.jpg" class="s-img-switch"
-                            alt="middle-banner image" />
+                    <div class="subtitle ">O mně</div>
+                    <h2 class="title">Interior with the Soul</h2>
+                    <div class="content ">
+                        <p>Být sám sebou, utvářet vlastní svět a žít přítomným okamžikem. Obklopovat se lidmi, kteří se mnou plují na stejné vlně. To mě naučil život. Být jiný znamená být jedinečný. Být sám sebou znamená být opravdový.</p>
+                        <p>Tento přístup se odráží i v mé práci. "Interior with the Soul" pro mě není jen prázdná fráze, ale hluboká myšlenka zakořeněná v mém vlastním příběhu. Věřím, že interiér není jen o estetice, ale o emocích, vzpomínkách a energii, kterou v sobě nese. Každý prostor by měl odrážet svého majitele – jeho osobnost, sny a způsob života.
+                        </p>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+            <div class="no-padd padd-only-md-right col-sm-8 col-lg-4 col-md-offset-0 col-md-5 col-sm-offset-2 col-xs-12  margin-lg-50t margin-sm-0t">
+
+                <div class="team-wrapper  no-figure">
+                    <div class="trans_figures enable_anima">
+
                     </div>
 
-                    <div class="prague-shortcode-content-wrapp">
-                        <div class="prague-shortcode-heading  light left">
-                            <div class="parent-subtitle">SERVICES</div>
+                    <div class="team-outer" style=" height:465px">
+                        <img src="images/kontakt.jpg" data-lazy-src="images/kontakt.jpg" alt="girl image" class="prague-team-img s-img-switch">
 
-                            <h2 class="parent-title">This is what I do.</h2>
-                        </div>
-
-                        <div data-unique-key="0bf3c8aa9017e52dd041b7e2c3327621" class="js-load-more" data-start-page="1"
-                            data-max-page="2" data-next-link="onepage-home.html">
-                            <div class="row prague_services prague_count_col3 prague_gap_col15  no-footer-content prague-load-wrapper"
-                                data-columns="prague_count_col3" data-gap="prague_gap_col15">
-                                <div class="portfolio-item-wrapp prague_filter_class">
-                                    <div class="portfolio-item">
-
-                                        <div class="prague-services-wrapper">
-                                            <span class="services-item-icon icon-circle-compass"></span>
-
-                                            <h3 class="services-item-title">Planning</h3>
-                                            <div class="services-item-description">
-                                                <p>Our master plans provide a comprehensive look at where an
-                                                    organization is today.</p>
-                                            </div>
-
-                                            <a href="planning.html" class="prague-services-link a-btn-2 creative"
-                                                target="_self">
-                                                <span class="a-btn-line"></span>
-                                                READ </a>
-
-                                        </div>
-
-                                    </div>
-                                </div>
-                                <div class="portfolio-item-wrapp prague_filter_class  p_f_f9e81a7 column_paralax">
-                                    <div class="portfolio-item">
-
-                                        <div class="prague-services-wrapper">
-                                            <span class="services-item-icon icon-lightbulb"></span>
-
-                                            <h3 class="services-item-title">Interior</h3>
-                                            <div class="services-item-description">
-                                                <p>You may engage your architect to provide an interior design
-                                                    service, advising on loose furniture.</p>
-                                            </div>
-
-                                            <a href="interior.html" class="prague-services-link a-btn-2 creative"
-                                                target="_self">
-                                                <span class="a-btn-line"></span>
-                                                READ </a>
-
-                                        </div>
-
-                                    </div>
-                                </div>
-                                <div class="portfolio-item-wrapp prague_filter_class  p_f_f9e81a7">
-                                    <div class="portfolio-item">
-
-                                        <div class="prague-services-wrapper">
-                                            <span class="services-item-icon icon-layers"></span>
-
-                                            <h3 class="services-item-title">Exterior</h3>
-                                            <div class="services-item-description">
-                                                <p>Working together with your architect, you will share your
-                                                    project needs, dreams and goals.</p>
-                                            </div>
-
-                                            <a href="exterior.html" class="prague-services-link a-btn-2 creative"
-                                                target="_self">
-                                                <span class="a-btn-line"></span>
-                                                READ </a>
-
-                                        </div>
-
-                                    </div>
-                                </div>
-                            </div>
-
-
-                        </div>
                     </div>
 
                 </div>
             </div>
         </div>
     </div>
+
 
 
     <div class="container no-padd  margin-lg-0t margin-sm-20t">
