--- a/komerce_02.html
+++ b/komerce_02.html
@@ -88,31 +88,31 @@
                                 class="s-img-switch" alt="slier image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/komerce/02/01.jpg"
+                            <img width="2000" height="1200" src="images/komerce/02/01.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/komerce/02/02.jpg"
+                            <img width="2000" height="1200" src="images/komerce/02/02.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/komerce/02/03.jpg"
+                            <img width="2000" height="1200" src="images/komerce/02/03.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="1800" height="1417" src="images/komerce/02/04.jpg"
+                            <img width="1800" height="1417" src="images/komerce/02/04.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/komerce/02/05.jpg"
+                            <img width="2000" height="1200" src="images/komerce/02/05.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/komerce/02/06.jpg"
+                            <img width="2000" height="1200" src="images/komerce/02/06.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/komerce/02/07.jpg"
+                            <img width="2000" height="1200" src="images/komerce/02/07.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
 
@@ -134,31 +134,31 @@
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/komerce/02/01.jpg"
+                            <img width="2000" height="1200" src="images/komerce/02/01.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/komerce/02/02.jpg"
+                            <img width="2000" height="1200" src="images/komerce/02/02.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/komerce/02/03.jpg"
+                            <img width="2000" height="1200" src="images/komerce/02/03.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="1800" height="1417" src="images/komerce/02/04.jpg"
+                            <img width="1800" height="1417" src="images/komerce/02/04.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/komerce/02/05.jpg"
+                            <img width="2000" height="1200" src="images/komerce/02/05.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/komerce/02/06.jpg"
+                            <img width="2000" height="1200" src="images/komerce/02/06.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
                         <div class="project-detail-main-slide slick-slide">
-                            <img width="2000" height="1200" src="images/komerce/02/07.jpg"
+                            <img width="2000" height="1200" src="images/komerce/02/07.jpeg"
                                 class="s-img-switch" alt="slider image" />
                         </div>
 
