--- a/about-me.html
+++ b/about-me.html
@@ -119,7 +119,7 @@
                         
                         </div> 
                          <div class="col-xl-5 col-lg-6 offset-lg-1 text-center text-lg-start">
-                            <img src="images/kontak.jpg" alt="" class="border-radius-6px w-100">
+                            <img src="images/chloe.jpg" alt="" class="border-radius-6px w-100">
                             
                         </div>
                     </div> 
