--- a/about-me.html
+++ b/about-me.html
@@ -92,7 +92,7 @@
                     <div class="row align-items-center justify-content-center">
                        
                         <div class="col-lg-5 col-md-10 md-mb-50px text-center text-lg-start" >
-                            <h3 class="fw-800 text-dark-gray ls-minus-2px mb-5px">Co dělá mě mnou?</h3> 
+                            <h3 class="fw-200 text-gradient-gold ls-minus-2px mb-5px">Co dělá mě mnou?</h3> 
                             <span class="alt-font fs-18 mb-20px d-block text-dark-gray fw-500"></span>
                             <p class="mb-15px">
                             Chloe 🐕, vůně moře, láska ve všech podobách… Svoboda tvořit. Hledání krásy v jednoduchosti. Harmonie mezi prostorem a duší. <br>“…moje vlastné pravidlá, jedinečná DNA, robí zo mňa – mňa, chcem podotknúť…” 🎶
