--- a/about-me.html
+++ b/about-me.html
@@ -142,7 +142,7 @@
                 </div>
             </section>  
        <!-- START FOOTER -->
-    <footer class="prague-footer default" style="height: 50%; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
+    <footer class="prague-footer default" style="height: 450px; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
         <div class="footer-content-outer">
             <div class="footer-top-content">
                 <div class="prague-footer-main-block">
