--- a/about-me.html
+++ b/about-me.html
@@ -142,7 +142,7 @@
                 </div>
             </section>  
        <!-- START FOOTER -->
-    <footer class="prague-footer default" style="height: 400px; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
+    <footer class="prague-footer default" style="height: 500px; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
         <div class="footer-content-outer">
             <div class="footer-top-content">
                 <div class="prague-footer-main-block">
@@ -152,9 +152,7 @@
                     </div>
 
                     <div class="footer-main-content">
-                        <p>The company principle of Architecture-Studio is the collective conception. From the very
-                            beginning, the practice has believed in the virtues of exchange, crossing ideas, common
-                            effort, shared knowledge and enthusiasm.</p>
+                        <p>TVOŘÍM INTERIÉRY S DUŠÍ, KAŽDÝ PROSTOR MÁ SVŮJ PŘÍBĚH - NAPIŠTE SPOLU SE MNOU TEN SVŮJ </p>
                     </div>
 
                 </div>
