--- a/contact-us.html
+++ b/contact-us.html
@@ -21,7 +21,7 @@
         <link rel="stylesheet" href="css/style.css"/>
         <link rel="stylesheet" href="css/responsive.css"/>
         <link rel="stylesheet" href="demos/consulting/consulting.css" />
-        <link rel="stylesheet" href="css/prague/style.css">
+        <link rel="stylesheet" href="css/prague/style.css?=v4">
     </head>
      <!-- start header -->
      <header>
