--- a/contact-us.html
+++ b/contact-us.html
@@ -88,12 +88,10 @@
             <div class="  margin-md-90t margin-sm-20t col-sm-12 col-lg-offset-0 col-lg-6 col-md-offset-0 col-md-6 col-sm-offset-0 col-xs-12 padd-only-xs">
                 <div class="heading  left dark ">
 
-                    <div class="subtitle ">CONTACT</div>
-                    <h2 class="title">Let's start new project.</h2>
+                    <div class="subtitle ">Kontakt</div>
+                    <h2 class="title fw-100 text-gradient-gold">KONTAKTUJTE MĚ</h2>
                     <div class="content">
-                        <p>Now, as you were able to get a picture of who we are, it is up to you to contact us and
-                            lay the foundation for a new and successful business relationship. Our team consists</p>
-                    </div>
+                       <p>TVOŘÍM INTERIÉRY S DUŠÍ, KAŽDÝ PROSTOR MÁ SVŮJ PŘÍBĚH - NAPIŠTE SPOLU SE MNOU TEN SVŮJ </p>
                 </div>
                 <div class="row-fluid vc_custom_1488483852815">
                     <div class="col-sm-4 no-padd no-padd">
