--- a/projekty.html
+++ b/projekty.html
@@ -572,9 +572,7 @@
                     </div>
 
                     <div class="footer-main-content">
-                        <p>The company principle of Architecture-Studio is the collective conception. From the very
-                            beginning, the practice has believed in the virtues of exchange, crossing ideas, common
-                            effort, shared knowledge and enthusiasm.</p>
+                        <p>TVOŘÍM INTERIÉRY S DUŠÍ, KAŽDÝ PROSTOR MÁ SVŮJ PŘÍBĚH - NAPIŠTE SPOLU SE MNOU TEN SVŮJ </p>
                     </div>
 
                 </div>
