--- a/contact-us.html
+++ b/contact-us.html
@@ -91,7 +91,7 @@
                     <div class="subtitle ">Kontakt</div>
                     <h2 class="title fw-100 text-gradient-gold">KONTAKTUJTE MĚ</h2>
                     <div class="content">
-                       <p>TVOŘÍM INTERIÉRY S DUŠÍ, KAŽDÝ PROSTOR MÁ SVŮJ PŘÍBĚH - NAPIŠTE SPOLU SE MNOU TEN SVŮJ </p>
+                       <p>Tvořím interiéry s duší, každý prostor más svůj příběh - napište spolu se mnou ten svůj </p>
                 </div>
                 <div class="row-fluid vc_custom_1488483852815">
                     <div class="col-sm-4 no-padd no-padd">
