vc-sefkljwelfk del

--- a/contact-us.html
+++ b/contact-us.html
@@ -67,7 +67,7 @@
     <div class="container-fluid no-padd">
         <div class="row-fluid no-padd">
             <div class="col-sm-12 no-padd">
-                <div class="container-fluid top-banner no-padd  big  light no-marg-bottom vindow-height">
+                <div class="container-fluid top-banner no-padd big light no-marg-bottom vindow-height">
                     <span class="overlay"></span> <img src="images/hero3.png" class="s-img-switch"
                         alt="banner image">
                     <div class="content">
@@ -93,7 +93,7 @@
                     <div class="content">
                        <p>Tvořím interiéry s duší, každý prostor más svůj příběh - napište spolu se mnou ten svůj </p>
                 </div>
-                <div class="row-fluid vc_custom_1488483852815">
+                <div class="row-fluid">
                     <div class="col-sm-4 no-padd no-padd">
                         <div class="column-inner">
                             <div class="adddress-block  ">
