--- a/contact-us.html
+++ b/contact-us.html
@@ -138,7 +138,8 @@
                     </div>
                 </div>
             </div>
-           
+       </div>   
+    </div> 
     <!--/MAIN BODY-->
   <!-- START FOOTER -->
     <footer class="prague-footer default" style="height: 500px; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
