--- a/contact-us.html
+++ b/contact-us.html
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="css/prague/style.css?=v4">
     </head>
      <!-- start header -->
-     <header>
+    <header>
             
         <!-- end header top bar -->
         <!-- start navigation -->
@@ -83,12 +83,10 @@
         </div>
     </div>
 
-    <div class="container no-padd margin-lg-75t margin-sm-30t margin-md-0t">
+    <div class=" no-padd margin-lg-75t margin-sm-30t margin-md-0t">
         <div class="row-fluid ">
             <div class="  margin-md-90t margin-sm-20t col-sm-12 col-lg-offset-0 col-lg-6 col-md-offset-0 col-md-6 col-sm-offset-0 col-xs-12 padd-only-xs">
                 <div class="heading  left dark ">
-
-                    <div class="subtitle ">Kontakt</div>
                     <h2 class="title fw-100 text-gradient-gold">KONTAKTUJTE MĚ</h2>
                     <div class="content">
                        <p>Tvořím interiéry s duší, každý prostor más svůj příběh - napište spolu se mnou ten svůj </p>
