--- a/contact-us.html
+++ b/contact-us.html
@@ -83,7 +83,7 @@
         </div>
     </div>
 
-    <div class=" no-padd margin-lg-75t margin-sm-30t margin-md-0t">
+    <div class="container no-padd margin-lg-75t margin-sm-30t margin-md-0t">
         <div class="row-fluid ">
             <div class="  margin-md-90t margin-sm-20t col-sm-12 col-lg-offset-0 col-lg-6 col-md-offset-0 col-md-6 col-sm-offset-0 col-xs-12 padd-only-xs">
                 <div class="heading  left dark ">
@@ -138,6 +138,8 @@
             </div>
        </div>   
     </div> 
+    </div> 
+
     <!--/MAIN BODY-->
   <!-- START FOOTER -->
     <footer class="prague-footer default" style="height: 500px; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
