--- a/contact-us.html
+++ b/contact-us.html
@@ -92,7 +92,7 @@
                        <p>Tvořím interiéry s duší, každý prostor más svůj příběh - napište spolu se mnou ten svůj </p>
                 </div>
                 <div class="row-fluid">
-                    <div class="col-sm-4 no-padd no-padd">
+                    <div class="col-lg-4 no-padd no-padd">
                         <div class="column-inner">
                             <div class="adddress-block  ">
 
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-4 no-padd no-padd">
+                    <div class="col-lg-4 no-padd no-padd">
                         <div class="adddress-block  ">
 
                             <div class="address-block-outer">
@@ -121,7 +121,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="  col-sm-4 no-padd">
+                    <div class=" col-lg-4 no-padd">
                         <div class="adddress-block">
 
                             <div class="address-block-outer">
