text color change

--- a/contact-us.html
+++ b/contact-us.html
@@ -87,15 +87,15 @@
             <div class="container">
                 <div class="row justify-content-sm-center text-md-start text-center" data-anime='{ "el": "childs", "translateY": [15, 0], "translateX": [-15, 0], "opacity": [0,1], "duration": 800, "delay": 200, "staggervalue": 300, "easing": "easeOutQuad" }'>
                     <div class="col-xl-3 col-md-4 col-sm-6 sm-mb-20px offset-xl-2 last-paragraph-no-margin">
-                        <span class="d-block text-white">Have questions?</span>
+                        <span class="d-block text-dark-gray">Have questions?</span>
                         <p><a href="mailto:click@domain.com" class="text-medium-gray-hover">click@domain.com</a></p>
                     </div>
                     <div class="col-xl-3 col-md-4 col-sm-6 sm-mb-20px last-paragraph-no-margin">
-                        <span class="d-block text-white">Located at</span>
+                        <span class="d-block text-dark-gray">Located at</span>
                         <p class="w-800">Melbourne, Australia</p>
                     </div>
                     <div class="col-xl-3 col-md-4 col-sm-6 last-paragraph-no-margin">
-                        <span class="d-block text-white">Say hello!</span>
+                        <span class="d-block text-dark-gray">Say hello!</span>
                         <p>+ 123 456 78910</p>
                     </div>
                 </div>
