--- a/contact-us.html
+++ b/contact-us.html
@@ -109,8 +109,8 @@
                     <div class="content">
                        <p>Tvořím interiéry s duší, každý prostor más svůj příběh - napište spolu se mnou ten svůj </p>
                 </div>
-                <div class="row-fluid">
-                    <div class="col-lg-4 no-padd no-padd">
+                <div class="row justify-content-sm-center text-md-start text-center">
+                    <div class="col-xl-3 col-md-4 col-sm-6 sm-mb-20px offset-xl-2">
                         <div class="column-inner">
                             <div class="adddress-block  ">
 
@@ -125,7 +125,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-lg-4 no-padd no-padd">
+                    <div class="col-xl-3 col-md-4 col-sm-6 sm-mb-20px offset-xl-2">
                         <div class="adddress-block  ">
 
                             <div class="address-block-outer">
@@ -139,7 +139,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class=" col-lg-4 no-padd">
+                    <div class=" col-xl-3 col-md-4 col-sm-6 sm-mb-20px offset-xl-2">
                         <div class="adddress-block">
 
                             <div class="address-block-outer">
