--- a/contact-us.html
+++ b/contact-us.html
@@ -83,9 +83,9 @@
     </div>
 
    
-    <div class="container no-padd margin-lg-75t margin-sm-30t margin-md-0t">
+    <div class="container no-padd">
         <div class="">
-            <div class="  margin-md-90t margin-sm-20t col-sm-12 col-lg-offset-0 col-lg-6 col-md-offset-0 col-md-6 col-sm-offset-0 col-xs-12 padd-only-xs">
+            <div class="col-sm-12 col-lg-offset-0 col-lg-6 col-md-offset-0 col-md-6 col-sm-offset-0 col-xs-12 padd-only-xs">
                 <div class="heading  left dark ">
                     <h2 class="title fw-100 text-gradient-gold">KONTAKTUJTE MĚ</h2>
                     <div class="content">
