--- a/contact-us.html
+++ b/contact-us.html
@@ -82,7 +82,7 @@
    
     <div class="container w-100 no-padd">
         <div class="">
-            <div class="">
+            <div class="justify-content-center">
                 <div class="heading w-80 left dark ">
                     <h2 class="title fw-100 text-gradient-gold">KONTAKTUJTE MĚ</h2>
                     <div class="content mb-6">
