--- a/komerce_02.html
+++ b/komerce_02.html
@@ -57,11 +57,12 @@
                         <span class="navbar-toggler-line"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav"> 
+                        
                         <ul class="navbar-nav alt-font "> 
                             <li class="nav-item"><a href="index.html" class="nav-link ">domů</a></li>
                             <li class="nav-item"><a href="projekty.html" class="nav-link ">projekty</a></li>
                             <li class="nav-item dropdown dropdown-with-icon-style02">
-                                <a href="" class="nav-link ">služby</a>
+                                <a href="sluzby.html" class="nav-link ">služby</a>
                                 <i class="fa-solid fa-angle-down dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                </li>
                                <li class="nav-item"><a href="omne.html" class="nav-link ">o mně</a></li>
