--- a/sluzby.html
+++ b/sluzby.html
@@ -28,10 +28,10 @@
             
         <!-- end header top bar -->
         <!-- start navigation -->
-        <nav class="navbar navbar-expand-lg header-light bg-gradient-white-transparent header-reverse glass-effect h-100px">
+        <nav class="navbar navbar-expand-lg header-light bg-gradient-white-transparent header-reverse glass-effect h-150px">
             <div class="container-fluid">
-                <div class="col-auto col-lg-3 me-lg-0 me-auto">
-                    <a class="navbar-brand " href="index.html">
+                <div class="col-auto col-lg-3 me-lg-0 me-auto h-100">
+                    <a class="navbar-brand" href="index.html">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="default-logo h-100px">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="alt-logo">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="mobile-logo"> 
