--- a/index.html
+++ b/index.html
@@ -25,15 +25,15 @@
     </head>
     <body data-mobile-nav-style="classic">
         <!-- start header -->
-     <header>
+   <header>
             
         <!-- end header top bar -->
         <!-- start navigation -->
-        <nav class="navbar navbar-expand-lg header-light bg-gradient-white-transparent header-reverse glass-effect h-100px">
+         <nav class="navbar navbar-expand-lg header-light bg-gradient-white-transparent header-reverse glass-effect h-150px">
             <div class="container-fluid">
-                <div class="col-auto col-lg-3 me-lg-0 me-auto">
-                    <a class="navbar-brand " href="index.html">
-                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="default-logo h-100px">
+                <div class="col-auto col-lg-3 me-lg-0 me-auto h-100">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="default-logo h-75px">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="alt-logo">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="mobile-logo"> 
                     </a>
@@ -53,8 +53,8 @@
                                 <a href="sluzby.html" class="nav-link ">služby</a>
                                 <i class="fa-solid fa-angle-down dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                </li>
-                               <li class="nav-item"><a href="omne.html" class="nav-link ">o mně</a></li>
-                               <li class="nav-item"><a href="kontakt.html" class="nav-link ">kontakt</a></li>
+                            <li class="nav-item"><a href="omne.html" class="nav-link ">o mně</a></li>
+                            <li class="nav-item"><a href="kontakt.html" class="nav-link ">kontakt</a></li>
                         </ul>
                     </div>
                 </div>
