--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <div class="container">
             <div class="row align-items-center">
                 <div class="col">
-                <p class="mb-0 text-white text-start">© 2025 CLARE - Interiors. Všechna práva vyhrazena.</p>
+                <p class="mb-0 text-white text-start">© 2025 Charm Design. Všechna práva vyhrazena.</p>
                 </div>
                 <div class="col-auto ms-auto md-ms-0 menu-order position-static">
                     <span class="d-block d-sm-inline-block text-white fs-19 text-end left-icon d-inline-block align-middle xs-mt-10px ls-minus-05px"><a href="tel:+420735289745"><i class="feather icon-feather-phone-call"></i>+420 735 289 745</a></span>
