--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <div class="swiper-wrapper">
                     <!-- start slider item -->
                     <div class="swiper-slide h-100 overflow-hidden">
-                        <div class="cover-background position-absolute top-0 start-0 w-100 h-100" data-swiper-parallax="500" style="background-image:url('images/hero1.JPG');">
+                        <div class="cover-background position-absolute top-0 start-0 w-100 h-100" data-swiper-parallax="500" style="background-image:url('images/bezova.jpg');">
                             <div class="opacity-light"></div>
                             <div class="container h-100">
                                 <div class="row align-items-center h-100 justify-content-center">
