--- a/omne.html
+++ b/omne.html
@@ -24,15 +24,15 @@
         <link rel="stylesheet" href="css/prague/style.css">
     </head>
      <!-- start header -->
-     <header>
+       <header>
             
         <!-- end header top bar -->
         <!-- start navigation -->
-        <nav class="navbar navbar-expand-lg header-light bg-gradient-white-transparent header-reverse glass-effect h-100px">
+         <nav class="navbar navbar-expand-lg header-light bg-gradient-white-transparent header-reverse glass-effect h-250px">
             <div class="container-fluid">
-                <div class="col-auto col-lg-3 me-lg-0 me-auto">
-                    <a class="navbar-brand " href="index.html">
-                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="default-logo h-100px">
+                <div class="col-auto col-lg-3 me-lg-0 me-auto h-100">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="default-logo h-75px">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="alt-logo">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="mobile-logo"> 
                     </a>
@@ -46,7 +46,7 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav"> 
                         <ul class="navbar-nav alt-font "> 
-                            <li class="nav-item"><a href="index.html" class="nav-link ">domů</a></li>
+                            <li class="nav-item"><a href="index.html" class="nav-link text-white">domů</a></li>
                             <li class="nav-item"><a href="projekty.html" class="nav-link ">projekty</a></li>
                             <li class="nav-item dropdown dropdown-with-icon-style02">
                                 <a href="sluzby.html" class="nav-link ">služby</a>
