--- a/omne.html
+++ b/omne.html
@@ -24,7 +24,7 @@
         <link rel="stylesheet" href="css/prague/style.css">
     </head>
      <!-- start header -->
-       <header>
+  <header>
             
         <!-- end header top bar -->
         <!-- start navigation -->
@@ -47,13 +47,13 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav"> 
                         <ul class="navbar-nav alt-font "> 
                             <li class="nav-item"><a href="index.html" class="nav-link text-white">domů</a></li>
-                            <li class="nav-item"><a href="projekty.html" class="nav-link ">projekty</a></li>
+                            <li class="nav-item"><a href="projekty.html" class="nav-link text-white">projekty</a></li>
                             <li class="nav-item dropdown dropdown-with-icon-style02">
-                                <a href="sluzby.html" class="nav-link ">služby</a>
+                                <a href="sluzby.html" class="nav-link text-white ">služby</a>
                                 <i class="fa-solid fa-angle-down dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
                                </li>
-                            <li class="nav-item"><a href="omne.html" class="nav-link ">o mně</a></li>
-                            <li class="nav-item"><a href="kontakt.html" class="nav-link ">kontakt</a></li>
+                            <li class="nav-item"><a href="omne.html" class="nav-link text-white">o mně</a></li>
+                            <li class="nav-item"><a href="kontakt.html" class="nav-link text-white">kontakt</a></li>
                         </ul>
                     </div>
                 </div>
