--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <p class="mb-0 text-white text-start">© 2025 Charm Design. Všechna práva vyhrazena.</p>
                 </div>
                 <div class="col-auto ms-auto md-ms-0 menu-order position-static">
-                    <span class="d-block d-sm-inline-block text-white fs-19 text-end left-icon d-inline-block align-middle xs-mt-10px ls-minus-05px"><a href="https://www.instagram.com/charm_interiordesign_cz/?hl=cs"><i class="feather text-white icon-feather-instagram"></i></a><a href="https://www.linkedin.com/in/kl%C3%A1ra-dyd%C5%88ansk%C3%A1-2b6a8924a/?originalSubdomain=cz"><i class="feather text-white icon-feather-linkedin"></i></a><a href="https://cz.pinterest.com/dydansk/"><i class="feather text-white icon-feather-pinterest"></i></a><<a href="tel:+420735289745"><i class="feather text-white icon-feather-phone-call"></i>+420 735 289 745</a>/span>
+                    <span class="d-block d-sm-inline-block text-white fs-19 text-end left-icon d-inline-block align-middle xs-mt-10px ls-minus-05px"><a href="https://www.instagram.com/charm_interiordesign_cz/?hl=cs"><i class="feather text-white icon-feather-instagram"></i></a><a href="https://www.linkedin.com/in/kl%C3%A1ra-dyd%C5%88ansk%C3%A1-2b6a8924a/?originalSubdomain=cz"><i class="feather text-white icon-feather-linkedin"></i></a><a href="tel:+420735289745"><i class="feather text-white icon-feather-phone-call"></i>+420 735 289 745</a></span>
                     </div>
             </div>
             </div>
