footer background change

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
         <footer class="prague-footer modern bg-gradient-white-transparent-90" style="height: auto; padding: 15px 0;">
             <div class="container">
             <div class="row align-items-center">
-                <div class="col">
+                <div class="col w-50">
                 <p class="mb-0 text-white text-start">© 2025 Charm Design. Všechna práva vyhrazena.</p>
                 </div>
                 <div class="col-auto ms-auto md-ms-0 menu-order position-static">
