--- a/projekty.html
+++ b/projekty.html
@@ -45,13 +45,13 @@
             
         <!-- end header top bar -->
         <!-- start navigation -->
-         <nav class="navbar navbar-expand-lg header-light bg-gradient-white-transparent header-reverse glass-effect h-120px">
+         <nav class="navbar navbar-expand-lg header-light bg-gradient-white-transparent header-reverse glass-effect h-250px">
             <div class="container-fluid">
-                <div class="col-auto col-lg-3 me-lg-0 me-auto h-90">
+                <div class="col-auto col-lg-3 me-lg-0 me-auto h-100">
                     <a class="navbar-brand" href="index.html">
-                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="default-logo h-60px">
+                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="default-logo h-75px">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="alt-logo">
-                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="mobile-logo h-35px"> 
+                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="mobile-logo"> 
                     </a>
                 </div>
                 <div class="col-auto ms-auto md-ms-0 menu-order position-static">
@@ -62,12 +62,15 @@
                         <span class="navbar-toggler-line"></span>
                     </button>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav"> 
-                        <ul class="navbar-nav alt-font ">   
+                        <ul class="navbar-nav alt-font "> 
                             <li class="nav-item"><a href="index.html" class="nav-link">domů</a></li>
                             <li class="nav-item"><a href="projekty.html" class="nav-link ">projekty</a></li>
-                            <li class="nav-item"><a href="sluzby.html" class="nav-link ">služby</a></li>
-                            <li class="nav-item"><a href="omne.html" class="nav-link text-white">o mně</a></li>
-                            <li class="nav-item"><a href="kontakt.html" class="nav-link text-white">kontakt</a></li>
+                            <li class="nav-item dropdown dropdown-with-icon-style02">
+                                <a href="sluzby.html" class="nav-link">služby</a>
+                                <i class="fa-solid fa-angle-down dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
+                               </li>
+                            <li class="nav-item"><a href="omne.html" class="nav-link">o mně</a></li>
+                            <li class="nav-item"><a href="kontakt.html" class="nav-link">kontakt</a></li>
                         </ul>
                     </div>
                 </div>
