Header mobile logo

--- a/projekty.html
+++ b/projekty.html
@@ -51,7 +51,7 @@
                     <a class="navbar-brand" href="index.html">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="default-logo h-75px">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="alt-logo">
-                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="mobile-logo"> 
+                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="mobile-logo h-35px"> 
                     </a>
                 </div>
                 <div class="col-auto ms-auto md-ms-0 menu-order position-static">
