bg-color change

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <link rel="stylesheet" href="css/responsive.css"/>
         <link rel="stylesheet" href="demos/consulting/consulting.css" />
     </head>
-    <body data-mobile-nav-style="classic">
+    <body data-mobile-nav-style="classic" style="background-color: #a79682 ;">
         <!-- start header -->
  <header>
             
