slider margin top test

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!-- end header -->
         <!-- start section -->
         <section class="p-0 mb-0">
-            <div class="swiper full-screen bg-dark-gray ipad-top-space-margin swiper-number-pagination-style-02  light  lg-no-parallax" data-slider-options='{ "slidesPerView": 1, "direction": "horizontal", "loop": true, "parallax": true, "speed": 2000, "pagination": { "el": ".swiper-number", "clickable": true }, "autoplay": { "delay": 8000, "disableOnInteraction": false },  "keyboard": { "enabled": true, "onlyInViewport": true }, "breakpoints": { "1199": { "direction": "vertical" }}, "effect": "slide" }' data-number-pagination="1">
+            <div class="swiper full-screen bg-dark-gray ipad-top-space-margin swiper-number-pagination-style-02  light  lg-no-parallax" data-slider-options='{ "slidesPerView": 1, "direction": "horizontal", "loop": true, "parallax": true, "speed": 2000, "pagination": { "el": ".swiper-number", "clickable": true }, "autoplay": { "delay": 8000, "disableOnInteraction": false },  "keyboard": { "enabled": true, "onlyInViewport": true }, "breakpoints": { "1199": { "direction": "vertical" }}, "effect": "slide" }' data-number-pagination="1" style="height: 920px; margin-top: 100px">
                 <div class="swiper-wrapper">
                     <!-- start slider item -->
                     <div class="swiper-slide h-100 overflow-hidden">
