--- a/sluzby.html
+++ b/sluzby.html
@@ -62,7 +62,7 @@
         </nav>
        
     </header>
-        <!-- end header -->
+        <!-- end header
          <div class="container-fluid no-padd">
         <div class="row-fluid no-padd">
             <div class="col-sm-12 no-padd">
@@ -78,7 +78,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->
 
       <section>
                 <div class="container">
