--- a/sluzby.html
+++ b/sluzby.html
@@ -48,10 +48,7 @@
                         <ul class="navbar-nav alt-font "> 
                             <li class="nav-item"><a href="index.html" class="nav-link ">domů</a></li>
                             <li class="nav-item"><a href="projekty.html" class="nav-link ">projekty</a></li>
-                            <li class="nav-item dropdown dropdown-with-icon-style02">
-                                <a href="sluzby.html" class="nav-link ">služby</a>
-                                <i class="fa-solid fa-angle-down dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
-                               </li>
+                            <li class="nav-item"><a href="sluzby.html" class="nav-link ">služby</a></li>
                             <li class="nav-item"><a href="omne.html" class="nav-link ">o mně</a></li>
                             <li class="nav-item"><a href="kontakt.html" class="nav-link ">kontakt</a></li>
                         </ul>
