--- a/omne.html
+++ b/omne.html
@@ -28,13 +28,13 @@
             
         <!-- end header top bar -->
         <!-- start navigation -->
-         <nav class="navbar navbar-expand-lg header-light bg-gradient-white-transparent header-reverse glass-effect h-250px">
+         <nav class="navbar navbar-expand-lg header-light bg-gradient-white-transparent header-reverse glass-effect h-150px">
             <div class="container-fluid">
                 <div class="col-auto col-lg-3 me-lg-0 me-auto h-100">
                     <a class="navbar-brand" href="index.html">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="default-logo h-75px">
                         <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="alt-logo">
-                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="mobile-logo"> 
+                        <img src="images/logo-demo.png" data-at2x="images/logo-demo.png" alt="" class="mobile-logo h-40px"> 
                     </a>
                 </div>
                 <div class="col-auto ms-auto md-ms-0 menu-order position-static">
@@ -46,14 +46,11 @@
                     </button>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNav"> 
                         <ul class="navbar-nav alt-font "> 
-                            <li class="nav-item"><a href="index.html" class="nav-link text-white">domů</a></li>
-                            <li class="nav-item"><a href="projekty.html" class="nav-link text-white">projekty</a></li>
-                            <li class="nav-item dropdown dropdown-with-icon-style02">
-                                <a href="sluzby.html" class="nav-link text-white ">služby</a>
-                                <i class="fa-solid fa-angle-down dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false"></i>
-                               </li>
-                            <li class="nav-item"><a href="omne.html" class="nav-link text-white">o mně</a></li>
-                            <li class="nav-item"><a href="kontakt.html" class="nav-link text-white">kontakt</a></li>
+                            <li class="nav-item"><a href="index.html" class="nav-link ">domů</a></li>
+                            <li class="nav-item"><a href="projekty.html" class="nav-link ">projekty</a></li>
+                            <li class="nav-item"><a href="sluzby.html" class="nav-link ">služby</a></li>
+                            <li class="nav-item"><a href="omne.html" class="nav-link ">o mně</a></li>
+                            <li class="nav-item"><a href="kontakt.html" class="nav-link ">kontakt</a></li>
                         </ul>
                     </div>
                 </div>
