javascript na otvírání menu

--- a/omne.html
+++ b/omne.html
@@ -163,7 +163,9 @@
     </footer>
     <!--/END FOOTER-->
 
-
+ <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/vendors.min.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     <script src="js/js/jquery.js"></script>
     <script src="js/js/vivus.min.js"></script>
     <script src="js/js/hammer.min.js"></script>
