--- a/sluzby.html
+++ b/sluzby.html
@@ -286,7 +286,9 @@ Pokoje tvořím tak, aby byly nejen krásné, ale i funkční – s důrazem na
     </footer>
     <!--/END FOOTER-->
 
-
+ <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/vendors.min.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
     <script src="js/js/jquery.js"></script>
     <script src="js/js/vivus.min.js"></script>
     <script src="js/js/hammer.min.js"></script>
