--- a/projekty.html
+++ b/projekty.html
@@ -594,7 +594,9 @@
 
     </footer>
     <!--/END FOOTER-->
-
+     <script type="text/javascript" src="js/jquery.js"></script>
+        <script type="text/javascript" src="js/vendors.min.js"></script>
+        <script type="text/javascript" src="js/main.js"></script>
 
     <script src="js/js/jquery.js"></script>
     <script src="js/js/vivus.min.js"></script>
