--- a/kontakt.html
+++ b/kontakt.html
@@ -136,14 +136,14 @@
     </div> 
 
     <!--/MAIN BODY-->
-  <!-- START FOOTER -->
+ <!-- START FOOTER -->
     <footer class="prague-footer default" style="height: 500px; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
         <div class="footer-content-outer">
             <div class="footer-top-content">
                 <div class="prague-footer-main-block">
                     <div class="prague-logo">
                         <a href="index.html">
-                            <img src="images/logo-demo.png" data-lazy-src="" class="attachment-full size-full" alt="logo" style="width: 150px;"> </a>
+                            <img src="images/logo-demo.png" data-lazy-src="" class="attachment-full size-full" alt="logo" style="width: 150px;" /> </a>
                     </div>
 
                     <div class="footer-main-content">
@@ -167,7 +167,7 @@
 
                 <!-- Footer copyright -->
                 <div class="footer-copyright">
-                    <p>© 2025 Charm Design. Všechna práva vyhrazena.</p>
+                    <p>© 2025 CLARE - Interiors. Všechna práva vyhrazena.</p>
                 </div>
                 <!-- End footer copyright -->
 
@@ -175,7 +175,6 @@
         </div>
 
     </footer>
-    <!--/END FOOTER-->
  <script type="text/javascript" src="js/jquery.js"></script>
         <script type="text/javascript" src="js/vendors.min.js"></script>
         <script type="text/javascript" src="js/main.js"></script>
