--- a/sluzby.html
+++ b/sluzby.html
@@ -246,7 +246,8 @@ Pokoje tvořím tak, aby byly nejen krásné, ale i funkční – s důrazem na
                 </div>
             </section>  
        <!-- START FOOTER -->
-    <footer class="prague-footer default" style="min-height: 400px; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
+     <!-- START FOOTER -->
+    <footer class="prague-footer default" style="height: 500px; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
         <div class="footer-content-outer">
             <div class="footer-top-content">
                 <div class="prague-footer-main-block">
