--- a/omne.html
+++ b/omne.html
@@ -28,7 +28,7 @@
             
         <!-- end header top bar -->
         <!-- start navigation -->
-         <nav class="navbar navbar-expand-lg header-light bg-gradient-white-transparent header-reverse glass-effect h-150px">
+         <nav class="navbar navbar-expand-lg bg-gradient-white-transparent header-reverse glass-effect h-150px">
             <div class="container-fluid">
                 <div class="col-auto col-lg-3 me-lg-0 me-auto h-100">
                     <a class="navbar-brand" href="index.html">
@@ -123,7 +123,8 @@
             <!-- end section -->
             
        <!-- START FOOTER -->
-    <footer class="prague-footer default" style="min-height: 400px; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
+     <!-- START FOOTER -->
+    <footer class="prague-footer default" style="height: 500px; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
         <div class="footer-content-outer">
             <div class="footer-top-content">
                 <div class="prague-footer-main-block">
