--- a/kontakt.html
+++ b/kontakt.html
@@ -124,7 +124,7 @@
 
                                 <h4 class="address-title">Instagram</h4>
 
-                                <p>clare_theartist</p>
+                                <p>charm_interiordesign_cz</p>
                                
                             </div>
                         </div>
