footer img change

--- a/sluzby.html
+++ b/sluzby.html
@@ -247,7 +247,7 @@ Pokoje tvořím tak, aby byly nejen krásné, ale i funkční – s důrazem na
             </section>  
        <!-- START FOOTER -->
      <!-- START FOOTER -->
-    <footer class="prague-footer default" style="height: 500px; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
+    <footer class="prague-footer default" style="height: 500px; padding: 15px; background-image: url('images/footerimg.png'); background-size: cover; background-position: center; width: 100%;">
         <div class="footer-content-outer">
             <div class="footer-top-content">
                 <div class="prague-footer-main-block">
