--- a/projekty.html
+++ b/projekty.html
@@ -555,7 +555,7 @@
     <!--/MAIN BODY-->
 
     <!-- START FOOTER -->
-    <footer class="prague-footer default" style="height: 500px; padding: 15px; background-image: url('images/footerimg.jpeg'); background-size: cover; background-position: center; width: 100%;">
+    <footer class="prague-footer default" style="height: 500px; padding: 15px; background-image: url('images/footerimg.png'); background-size: cover; background-position: center; width: 100%;">
         <div class="footer-content-outer">
             <div class="footer-top-content">
                 <div class="prague-footer-main-block">
